--- a/css/base.css
+++ b/css/base.css
@@ -117,6 +117,7 @@ html {
 .stages__title_mobile,
 .stage-card__text_mobile,
 .pricing__text_mobile,
+.pricing__text_tablet,
 .equipment__description_mobile,
 .scenarios__description_mobile,
 .benefits__main-text_mobile,
